[package]
name = "image_effect"
version = "0.1.0"
authors = ["Yuuki Tsuchida"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
log = "0.4.0"
env_logger = "0.8.4"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
